--- a/index.html
+++ b/index.html
@@ -5,58 +5,18 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>MK - JSMarathon - Arenas</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Mortal Kombat</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="root">
-        <div class="arenas arena1">
-            <form class="control">
-                <div class="inputWrap">
-                    <h2>HIT</h2>
-                    <ul>
-                        <input type="radio" name="hit" value="head" id="headHit" required>
-                        <label for="headHit">
-                            <li>HEAD</li>
-                        </label>
-                        <input type="radio" name="hit" value="body" id="bodyHit" required>
-                        <label for="bodyHit">
-                            <li>BODY</li>
-                        </label>
-                        <input type="radio" name="hit" value="foot" id="footHit" required>
-                        <label for="footHit">
-                            <li>FOOT</li>
-                        </label>
-                    </ul>
-                </div>
-                <div class="inputWrap">
-                    <h2>DEFENCE</h2>
-                    <ul>
-                        <input type="radio" name="defence" value="head" id="headDefence" required>
-                        <label for="headDefence">
-                            <li>HEAD</li>
-                        </label>
-                        <input type="radio" name="defence" value="body" id="bodyDefence" required>
-                        <label for="bodyDefence">
-                            <li>BODY</li>
-                        </label>
-                        <input type="radio" name="defence" value="foot" id="footDefence" required>
-                        <label for="footDefence">
-                            <li>FOOT</li>
-                        </label>
-                    </ul>
-                </div>
-                <div class="buttonWrap">
-                    <button class="button" type="submit">
-                        Fight
-                    </button>
-                </div>
-            </form>
-        </div>
-        <div class="chat"></div>
-        <div class="wall-left"></div>
-        <div class="wall-right"></div>
+<div class="root">
+    <div class="title">
+        SELECT YOUR FIGHTERS
     </div>
-    <script src="main.js" type="module"></script>
+    <div class="player"></div>
+    <div class="parent"></div>
+
+    <script src="index.js"></script>
+</div>
 </body>
 </html>
